<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:padding="10dp">


            <ImageButton
                android:id="@+id/signup_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow" />

            <TextView
                android:id="@+id/signup_title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="25dp"
                android:layout_marginTop="40dp"
                android:text="@string/signup_title_tv"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/signup_back_button"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/signup_email_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="25dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="50dp"
                android:text="@string/signup_email_tv"
                android:textColor="@color/dimgray"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_back_button" />

            <EditText
                android:id="@+id/signup_email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/edt_login_logintext"
                android:hint="@string/signup_email_hint"
                android:textColorHint="@color/dimgray"
                android:inputType="text"
                android:padding="20dp"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/signup_email_textview"
                app:layout_constraintTop_toBottomOf="@+id/signup_email_textview" />

            <TextView
                android:id="@+id/signup_password_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="25dp"
                android:layout_marginTop="30dp"
                android:text="@string/signup_password_tv"
                android:textColor="@color/dimgray"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/signup_email_textview"
                app:layout_constraintTop_toBottomOf="@+id/signup_email_edittext" />

            <EditText
                android:id="@+id/signup_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/edt_login_logintext"
                android:hint="@string/signup_password_hint"
                android:textColorHint="@color/dimgray"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_password_textview" />

            <TextView
                android:id="@+id/signup_checkpassword_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="25dp"
                android:layout_marginTop="30dp"
                android:text="@string/signup_checkpassword_tv"
                android:textColor="@color/dimgray"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/signup_password_textview"
                app:layout_constraintTop_toBottomOf="@+id/signup_password_edittext"/>

            <EditText
                android:id="@+id/signup_checkpassword_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/edt_login_logintext"
                android:hint="@string/signup_checkpassword_hint"
                android:textColorHint="@color/dimgray"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_checkpassword_textview" />

            <TextView
                android:id="@+id/signup_name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/signup_name_tv"
                android:textColor="@color/dimgray"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/signup_checkpassword_edittext"
                app:layout_constraintTop_toBottomOf="@+id/signup_checkpassword_edittext"  />

            <EditText
                android:id="@+id/signup_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/edt_login_logintext"
                android:hint="@string/signup_name_hint"
                android:textColorHint="@color/dimgray"
                android:inputType="text"
                android:padding="20dp"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/signup_name_textview"
                app:layout_constraintTop_toBottomOf="@+id/signup_name_textview" />

            <Button
                android:id="@+id/signup_signup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="25dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/deepskyblue"
                android:text="@string/signup_signup_btn"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_name_edittext" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>