<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp">


    <ImageView
        android:id="@+id/home_background4_imageview"
        android:layout_width="370dp"
        android:layout_height="300dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_background_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/home_profile_imageview"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_btob"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="@+id/home_background4_imageview"
        app:layout_constraintTop_toTopOf="@+id/home_background4_imageview" />

    <TextView
        android:id="@+id/home_bts_textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="25dp"
        android:text="@string/bts"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/home_profile_imageview"
        app:layout_constraintTop_toTopOf="@+id/home_background4_imageview" />

    <TextView
        android:id="@+id/home_content_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="15dp"
        android:text="@string/content_tv"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/home_bts_textview2"
        app:layout_constraintTop_toBottomOf="@+id/home_bts_textview2" />

    <TextView
        android:id="@+id/home_time_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="15dp"
        android:text="@string/time_tv"
        android:textSize="11sp"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/home_content_textview"
        app:layout_constraintStart_toEndOf="@+id/home_content_textview"
        app:layout_constraintTop_toTopOf="@+id/home_content_textview" />


    <ImageView
        android:id="@+id/home_dot_imageview"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_dot"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="@+id/home_background4_imageview"
        app:layout_constraintTop_toTopOf="@+id/home_bts_textview2" />

    <TextView
        android:id="@+id/home_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="25dp"
        android:text="@string/title_content_tv"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/home_profile_imageview"
        app:layout_constraintTop_toBottomOf="@+id/home_profile_imageview" />

    <ImageView
        android:id="@+id/home_bts_imageview2"
        android:layout_width="340dp"
        android:layout_height="160dp"
        android:src="@drawable/img_bts"
        android:scaleType="fitXY"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/home_background4_imageview"
        app:layout_constraintStart_toStartOf="@+id/home_background4_imageview"
        app:layout_constraintTop_toBottomOf="@+id/home_title_textview" />





</androidx.constraintlayout.widget.ConstraintLayout>