<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whisper"
    tools:context=".IdleActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">


            <ImageView
                android:id="@+id/btob_logo"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:importantForAccessibility="no"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_idle" />

            <TextView
                android:id="@+id/idol_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="44dp"
                android:minHeight="30dp"
                android:text="@string/idle_title"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toEndOf="@+id/btob_logo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/idol_info1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/idle_info1"
                android:autoSizeTextType="uniform"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/idol_title"
                app:layout_constraintTop_toBottomOf="@+id/idol_title" />

            <TextView
                android:id="@+id/idol_info2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/idle_info2"
                android:autoSizeTextType="uniform"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/idol_info1"
                app:layout_constraintTop_toBottomOf="@+id/idol_info1" />

            <ImageView
                android:id="@+id/ic_blackline"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:layout_marginTop="32dp"
                android:importantForAccessibility="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idol_info2"
                app:srcCompat="@drawable/ic_blackline"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/idol_info3"
                android:layout_width="0dp"
                android:layout_height="424dp"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="10dp"
                android:text="@string/idle_info3"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_blackline" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>