<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/charcoal"
    android:layout_weight="1"
    tools:context=".MyPageActivity">

    <!--    오류 해결 방법 모르겠음..-->
    <ImageButton
        android:id="@+id/mypage_btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gray_constraintlayout"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:elevation="20dp"
        android:background="@drawable/rectangular_mypage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="@+id/gray_constraintlayout"
            app:layout_constraintLeft_toLeftOf="@+id/gray_constraintlayout"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="150dp"
            app:layout_constraintTop_toTopOf="@+id/gray_constraintlayout"
            app:layout_constraintLeft_toLeftOf="@+id/gray_constraintlayout"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="200dp"
            app:layout_constraintTop_toTopOf="@+id/gray_constraintlayout"
            app:layout_constraintLeft_toLeftOf="@+id/gray_constraintlayout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/round_profile"
        android:layout_marginBottom="70dp"
        android:elevation="30dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>




