<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_weight="1"
    android:background="@color/charcoal"
    tools:context=".MypageFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

<!--            <ImageView-->
<!--                android:id="@+id/mypage_btn_back"-->
<!--                android:layout_width="30dp"-->
<!--                android:layout_height="30dp"-->
<!--                android:layout_marginLeft="30dp"-->
<!--                android:layout_marginTop="30dp"-->
<!--                android:clickable="true"-->
<!--                android:src="@drawable/ic_cancel"-->
<!--                app:layout_constraintLeft_toLeftOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_margin="0dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/gray_constraintlayout"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:background="@drawable/rectangular_mypage"
                android:elevation="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="100dp"
                    android:text="@string/id"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="@+id/gray_constraintlayout"
                    app:layout_constraintTop_toTopOf="@+id/gray_constraintlayout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="150dp"
                    android:text="@string/name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="@+id/gray_constraintlayout"
                    app:layout_constraintTop_toTopOf="@+id/gray_constraintlayout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="200dp"
                    android:text="@string/artist"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="@+id/gray_constraintlayout"
                    app:layout_constraintTop_toTopOf="@+id/gray_constraintlayout" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="70dp"
                android:background="@drawable/round_profile"
                android:elevation="30dp"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>